lab2/sytax.output
Terminals unused in grammar

   STRUCT
   SPACE
   AERROR
   NULLPTR
   EOL


状态 14conflicts: 1 shift/reduce
状态 95conflicts: 1 shift/reduce, 3 reduce/reduce
状态 100conflicts: 1 reduce/reduce
状态 119conflicts: 20 shift/reduce
状态 135conflicts: 20 shift/reduce, 1 reduce/reduce
状态 137conflicts: 1 shift/reduce, 21 reduce/reduce
状态 144conflicts: 20 shift/reduce
状态 147conflicts: 20 shift/reduce
状态 158conflicts: 1 shift/reduce
状态 178conflicts: 20 shift/reduce
状态 179conflicts: 20 shift/reduce
状态 181conflicts: 20 shift/reduce
状态 187conflicts: 20 shift/reduce
状态 195conflicts: 20 shift/reduce


语法

    0 $accept: Program $end

    1 Program: ClassDefs

    2 ClassDefs: Class
    3          | Class ClassDefs

    4 Class: CLASS ID LC ClassStms RC
    5      | CLASS ID EXTENDS ID LC ClassStms RC

    6 ClassStms: ClassStm ClassStms
    7          | ClassStm

    8 ClassStm: Fun
    9         | DeclareStm

   10 Fun: VarType ID LP Args RP LC BaseStm RC
   11    | STATIC VarType ID LP Args RP LC BaseStm RC
   12    | ID LP Args RP LC BaseStm RC

   13 VarType: TYPE Arrays
   14        | ID Arrays
   15        | TYPE
   16        | ID

   17 Arrays: ARRAY
   18       | ARRAY Arrays

   19 BaseStm: Lines

   20 Lines: Line
   21      | Line Lines

   22 Line: EMPTY
   23     | IfStm
   24     | WhileStm
   25     | VarStm SEMI
   26     | DeclareStm
   27     | ReturnStm
   28     | BreakStm
   29     | ForStm

   30 BreakStm: BREAK SEMI

   31 IfStm: IF LP BoolExp RP LC BaseStm RC
   32      | IfStm ELIfStm ElseStm

   33 ELIfStm: ELIF LP Exp RP LC BaseStm RC
   34        | EMPTY

   35 ElseStm: ELSE LC BaseStm RC
   36        | EMPTY

   37 WhileStm: WHILE LP BoolExp RP LC BaseStm RC

   38 ForStm: FOR LP Exp SEMI BoolExp SEMI Exp RP LC BaseStm RC

   39 DeclareStm: VarType VarStm SEMI
   40           | STATIC VarType VarStm SEMI
   41           | FINAL VarType VarStm SEMI
   42           | STATIC FINAL VarType VarStm SEMI

   43 VarStm: Exp
   44       | Exp COMMA VarStm

   45 ReturnStm: RETURN SEMI
   46          | RETURN Exp SEMI

   47 Args: EMPTY
   48     | Arg

   49 Arg: VarType ID
   50    | VarType ID COMMA Arg

   51 BoolExp: Exp RELOP Exp
   52        | Exp AND Exp
   53        | Exp OR Exp

   54 Exp: Constant
   55    | Call
   56    | ID DOT Call
   57    | ID DOT ID
   58    | ID
   59    | THIS DOT ID
   60    | THIS DOT Call
   61    | Lvalue ASSIGNOP Exp
   62    | Exp PLUS Exp
   63    | Exp MINUS Exp
   64    | BoolExp
   65    | Exp STAR Exp
   66    | Exp DIV Exp
   67    | LP Exp RP
   68    | MINUS Exp
   69    | NOT Exp
   70    | ID ArrayIndex
   71    | DPLUS Exp
   72    | Exp DPLUS
   73    | DMINUS Exp
   74    | Exp DMINUS
   75    | NEW Call
   76    | NEW TYPE ArrayIndex

   77 ArrayIndex: LB Exp RB
   78           | LB Exp RB ArrayIndex

   79 Lvalue: ID

   80 Constant: INT
   81         | FLOAT
   82         | BOOL
   83         | STR

   84 Call: ID LP CallArgs RP

   85 CallArgs: EMPTY
   86         | CallArg

   87 CallArg: Exp
   88        | Exp COMMA CallArg

   89 EMPTY: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
STATIC (258) 11 40 42
ARRAY (259) 17 18
FINAL (260) 41 42
BREAK (261) 30
TYPE (262) 13 15 76
STRUCT (263)
EXTENDS (264) 5
CLASS (265) 4 5
RETURN (266) 45 46
IF (267) 31
ELSE (268) 35
ELIF (269) 33
FOR (270) 38
WHILE (271) 37
ID (272) 4 5 10 11 12 14 16 49 50 56 57 58 59 70 79 84
SPACE (273)
SEMI (274) 25 30 38 39 40 41 42 45 46
COMMA (275) 44 50 88
ASSIGNOP (276) 61
RELOP (277) 51
DOT (278) 56 57 59 60
NOT (279) 69
LP (280) 10 11 12 31 33 37 38 67 84
RP (281) 10 11 12 31 33 37 38 67 84
LB (282) 77 78
RB (283) 77 78
LC (284) 4 5 10 11 12 31 33 35 37 38
RC (285) 4 5 10 11 12 31 33 35 37 38
AERROR (286)
DPLUS (287) 71 72
DMINUS (288) 73 74
INT (289) 80
FLOAT (290) 81
NULLPTR (291)
STR (292) 83
BOOL (293) 82
PLUS (294) 62
MINUS (295) 63 68
STAR (296) 65
DIV (297) 66
OR (298) 53
AND (299) 52
EOL (300)
NEW (301) 75 76
THIS (302) 59 60


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
Program (49)
    on left: 1, on right: 0
ClassDefs (50)
    on left: 2 3, on right: 1 3
Class (51)
    on left: 4 5, on right: 2 3
ClassStms (52)
    on left: 6 7, on right: 4 5 6
ClassStm (53)
    on left: 8 9, on right: 6 7
Fun (54)
    on left: 10 11 12, on right: 8
VarType (55)
    on left: 13 14 15 16, on right: 10 11 39 40 41 42 49 50
Arrays (56)
    on left: 17 18, on right: 13 14 18
BaseStm (57)
    on left: 19, on right: 10 11 12 31 33 35 37 38
Lines (58)
    on left: 20 21, on right: 19 21
Line (59)
    on left: 22 23 24 25 26 27 28 29, on right: 20 21
BreakStm (60)
    on left: 30, on right: 28
IfStm (61)
    on left: 31 32, on right: 23 32
ELIfStm (62)
    on left: 33 34, on right: 32
ElseStm (63)
    on left: 35 36, on right: 32
WhileStm (64)
    on left: 37, on right: 24
ForStm (65)
    on left: 38, on right: 29
DeclareStm (66)
    on left: 39 40 41 42, on right: 9 26
VarStm (67)
    on left: 43 44, on right: 25 39 40 41 42 44
ReturnStm (68)
    on left: 45 46, on right: 27
Args (69)
    on left: 47 48, on right: 10 11 12
Arg (70)
    on left: 49 50, on right: 48 50
BoolExp (71)
    on left: 51 52 53, on right: 31 37 38 64
Exp (72)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76, on right: 33 38 43 44 46 51 52 53 61 62 63 65 66
    67 68 69 71 72 73 74 77 78 87 88
ArrayIndex (73)
    on left: 77 78, on right: 70 76 78
Lvalue (74)
    on left: 79, on right: 61
Constant (75)
    on left: 80 81 82 83, on right: 54
Call (76)
    on left: 84, on right: 55 56 60 75
CallArgs (77)
    on left: 85 86, on right: 84
CallArg (78)
    on left: 87 88, on right: 86 88
EMPTY (79)
    on left: 89, on right: 22 34 36 47 85


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    转到状态 2
    ClassDefs  转到状态 3
    Class      转到状态 4


State 1

    4 Class: CLASS . ID LC ClassStms RC
    5      | CLASS . ID EXTENDS ID LC ClassStms RC

    ID  shift, and go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: ClassDefs .

    $default  reduce using rule 1 (Program)


State 4

    2 ClassDefs: Class .
    3          | Class . ClassDefs

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (ClassDefs)

    ClassDefs  转到状态 7
    Class      转到状态 4


State 5

    4 Class: CLASS ID . LC ClassStms RC
    5      | CLASS ID . EXTENDS ID LC ClassStms RC

    EXTENDS  shift, and go to state 8
    LC       shift, and go to state 9


State 6

    0 $accept: Program $end .

    $default  接受


State 7

    3 ClassDefs: Class ClassDefs .

    $default  reduce using rule 3 (ClassDefs)


State 8

    5 Class: CLASS ID EXTENDS . ID LC ClassStms RC

    ID  shift, and go to state 10


State 9

    4 Class: CLASS ID LC . ClassStms RC

    STATIC  shift, and go to state 11
    FINAL   shift, and go to state 12
    TYPE    shift, and go to state 13
    ID      shift, and go to state 14

    ClassStms   转到状态 15
    ClassStm    转到状态 16
    Fun         转到状态 17
    VarType     转到状态 18
    DeclareStm  转到状态 19


State 10

    5 Class: CLASS ID EXTENDS ID . LC ClassStms RC

    LC  shift, and go to state 20


State 11

   11 Fun: STATIC . VarType ID LP Args RP LC BaseStm RC
   40 DeclareStm: STATIC . VarType VarStm SEMI
   42           | STATIC . FINAL VarType VarStm SEMI

    FINAL  shift, and go to state 21
    TYPE   shift, and go to state 13
    ID     shift, and go to state 22

    VarType  转到状态 23


State 12

   41 DeclareStm: FINAL . VarType VarStm SEMI

    TYPE  shift, and go to state 13
    ID    shift, and go to state 22

    VarType  转到状态 24


State 13

   13 VarType: TYPE . Arrays
   15        | TYPE .

    ARRAY  shift, and go to state 25

    $default  reduce using rule 15 (VarType)

    Arrays  转到状态 26


State 14

   12 Fun: ID . LP Args RP LC BaseStm RC
   14 VarType: ID . Arrays
   16        | ID .

    ARRAY  shift, and go to state 25
    LP     shift, and go to state 27

    LP        [reduce using rule 16 (VarType)]
    $default  reduce using rule 16 (VarType)

    Arrays  转到状态 28


State 15

    4 Class: CLASS ID LC ClassStms . RC

    RC  shift, and go to state 29


State 16

    6 ClassStms: ClassStm . ClassStms
    7          | ClassStm .

    STATIC  shift, and go to state 11
    FINAL   shift, and go to state 12
    TYPE    shift, and go to state 13
    ID      shift, and go to state 14

    $default  reduce using rule 7 (ClassStms)

    ClassStms   转到状态 30
    ClassStm    转到状态 16
    Fun         转到状态 17
    VarType     转到状态 18
    DeclareStm  转到状态 19


State 17

    8 ClassStm: Fun .

    $default  reduce using rule 8 (ClassStm)


State 18

   10 Fun: VarType . ID LP Args RP LC BaseStm RC
   39 DeclareStm: VarType . VarStm SEMI

    ID      shift, and go to state 31
    NOT     shift, and go to state 32
    LP      shift, and go to state 33
    DPLUS   shift, and go to state 34
    DMINUS  shift, and go to state 35
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 37
    STR     shift, and go to state 38
    BOOL    shift, and go to state 39
    MINUS   shift, and go to state 40
    NEW     shift, and go to state 41
    THIS    shift, and go to state 42

    VarStm    转到状态 43
    BoolExp   转到状态 44
    Exp       转到状态 45
    Lvalue    转到状态 46
    Constant  转到状态 47
    Call      转到状态 48


State 19

    9 ClassStm: DeclareStm .

    $default  reduce using rule 9 (ClassStm)


State 20

    5 Class: CLASS ID EXTENDS ID LC . ClassStms RC

    STATIC  shift, and go to state 11
    FINAL   shift, and go to state 12
    TYPE    shift, and go to state 13
    ID      shift, and go to state 14

    ClassStms   转到状态 49
    ClassStm    转到状态 16
    Fun         转到状态 17
    VarType     转到状态 18
    DeclareStm  转到状态 19


State 21

   42 DeclareStm: STATIC FINAL . VarType VarStm SEMI

    TYPE  shift, and go to state 13
    ID    shift, and go to state 22

    VarType  转到状态 50


State 22

   14 VarType: ID . Arrays
   16        | ID .

    ARRAY  shift, and go to state 25

    $default  reduce using rule 16 (VarType)

    Arrays  转到状态 28


State 23

   11 Fun: STATIC VarType . ID LP Args RP LC BaseStm RC
   40 DeclareStm: STATIC VarType . VarStm SEMI

    ID      shift, and go to state 51
    NOT     shift, and go to state 32
    LP      shift, and go to state 33
    DPLUS   shift, and go to state 34
    DMINUS  shift, and go to state 35
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 37
    STR     shift, and go to state 38
    BOOL    shift, and go to state 39
    MINUS   shift, and go to state 40
    NEW     shift, and go to state 41
    THIS    shift, and go to state 42

    VarStm    转到状态 52
    BoolExp   转到状态 44
    Exp       转到状态 45
    Lvalue    转到状态 46
    Constant  转到状态 47
    Call      转到状态 48


State 24

   41 DeclareStm: FINAL VarType . VarStm SEMI

    ID      shift, and go to state 53
    NOT     shift, and go to state 32
    LP      shift, and go to state 33
    DPLUS   shift, and go to state 34
    DMINUS  shift, and go to state 35
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 37
    STR     shift, and go to state 38
    BOOL    shift, and go to state 39
    MINUS   shift, and go to state 40
    NEW     shift, and go to state 41
    THIS    shift, and go to state 42

    VarStm    转到状态 54
    BoolExp   转到状态 44
    Exp       转到状态 45
    Lvalue    转到状态 46
    Constant  转到状态 47
    Call      转到状态 48


State 25

   17 Arrays: ARRAY .
   18       | ARRAY . Arrays

    ARRAY  shift, and go to state 25

    $default  reduce using rule 17 (Arrays)

    Arrays  转到状态 55


State 26

   13 VarType: TYPE Arrays .

    $default  reduce using rule 13 (VarType)


State 27

   12 Fun: ID LP . Args RP LC BaseStm RC

    TYPE  shift, and go to state 13
    ID    shift, and go to state 22

    $default  reduce using rule 89 (EMPTY)

    VarType  转到状态 56
    Args     转到状态 57
    Arg      转到状态 58
    EMPTY    转到状态 59


State 28

   14 VarType: ID Arrays .

    $default  reduce using rule 14 (VarType)


State 29

    4 Class: CLASS ID LC ClassStms RC .

    $default  reduce using rule 4 (Class)


State 30

    6 ClassStms: ClassStm ClassStms .

    $default  reduce using rule 6 (ClassStms)


State 31

   10 Fun: VarType ID . LP Args RP LC BaseStm RC
   56 Exp: ID . DOT Call
   57    | ID . DOT ID
   58    | ID .
   70    | ID . ArrayIndex
   79 Lvalue: ID .
   84 Call: ID . LP CallArgs RP

    DOT  shift, and go to state 60
    LP   shift, and go to state 61
    LB   shift, and go to state 62

    ASSIGNOP  reduce using rule 79 (Lvalue)
    $default  reduce using rule 58 (Exp)

    ArrayIndex  转到状态 63


State 32

   69 Exp: NOT . Exp

    ID      shift, and go to state 53
    NOT     shift, and go to state 32
    LP      shift, and go to state 33
    DPLUS   shift, and go to state 34
    DMINUS  shift, and go to state 35
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 37
    STR     shift, and go to state 38
    BOOL    shift, and go to state 39
    MINUS   shift, and go to state 40
    NEW     shift, and go to state 41
    THIS    shift, and go to state 42

    BoolExp   转到状态 44
    Exp       转到状态 64
    Lvalue    转到状态 46
    Constant  转到状态 47
    Call      转到状态 48


State 33

   67 Exp: LP . Exp RP

    ID      shift, and go to state 53
    NOT     shift, and go to state 32
    LP      shift, and go to state 33
    DPLUS   shift, and go to state 34
    DMINUS  shift, and go to state 35
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 37
    STR     shift, and go to state 38
    BOOL    shift, and go to state 39
    MINUS   shift, and go to state 40
    NEW     shift, and go to state 41
    THIS    shift, and go to state 42

    BoolExp   转到状态 44
    Exp       转到状态 65
    Lvalue    转到状态 46
    Constant  转到状态 47
    Call      转到状态 48


State 34

   71 Exp: DPLUS . Exp

    ID      shift, and go to state 53
    NOT     shift, and go to state 32
    LP      shift, and go to state 33
    DPLUS   shift, and go to state 34
    DMINUS  shift, and go to state 35
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 37
    STR     shift, and go to state 38
    BOOL    shift, and go to state 39
    MINUS   shift, and go to state 40
    NEW     shift, and go to state 41
    THIS    shift, and go to state 42

    BoolExp   转到状态 44
    Exp       转到状态 66
    Lvalue    转到状态 46
    Constant  转到状态 47
    Call      转到状态 48


State 35

   73 Exp: DMINUS . Exp

    ID      shift, and go to state 53
    NOT     shift, and go to state 32
    LP      shift, and go to state 33
    DPLUS   shift, and go to state 34
    DMINUS  shift, and go to state 35
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 37
    STR     shift, and go to state 38
    BOOL    shift, and go to state 39
    MINUS   shift, and go to state 40
    NEW     shift, and go to state 41
    THIS    shift, and go to state 42

    BoolExp   转到状态 44
    Exp       转到状态 67
    Lvalue    转到状态 46
    Constant  转到状态 47
    Call      转到状态 48


State 36

   80 Constant: INT .

    $default  reduce using rule 80 (Constant)


State 37

   81 Constant: FLOAT .

    $default  reduce using rule 81 (Constant)


State 38

   83 Constant: STR .

    $default  reduce using rule 83 (Constant)


State 39

   82 Constant: BOOL .

    $default  reduce using rule 82 (Constant)


State 40

   68 Exp: MINUS . Exp

    ID      shift, and go to state 53
    NOT     shift, and go to state 32
    LP      shift, and go to state 33
    DPLUS   shift, and go to state 34
    DMINUS  shift, and go to state 35
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 37
    STR     shift, and go to state 38
    BOOL    shift, and go to state 39
    MINUS   shift, and go to state 40
    NEW     shift, and go to state 41
    THIS    shift, and go to state 42

    BoolExp   转到状态 44
    Exp       转到状态 68
    Lvalue    转到状态 46
    Constant  转到状态 47
    Call      转到状态 48


State 41

   75 Exp: NEW . Call
   76    | NEW . TYPE ArrayIndex

    TYPE  shift, and go to state 69
    ID    shift, and go to state 70

    Call  转到状态 71


State 42

   59 Exp: THIS . DOT ID
   60    | THIS . DOT Call

    DOT  shift, and go to state 72


State 43

   39 DeclareStm: VarType VarStm . SEMI

    SEMI  shift, and go to state 73


State 44

   64 Exp: BoolExp .

    $default  reduce using rule 64 (Exp)


State 45

   43 VarStm: Exp .
   44       | Exp . COMMA VarStm
   51 BoolExp: Exp . RELOP Exp
   52        | Exp . AND Exp
   53        | Exp . OR Exp
   62 Exp: Exp . PLUS Exp
   63    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . DIV Exp
   72    | Exp . DPLUS
   74    | Exp . DMINUS

    COMMA   shift, and go to state 74
    RELOP   shift, and go to state 75
    DPLUS   shift, and go to state 76
    DMINUS  shift, and go to state 77
    PLUS    shift, and go to state 78
    MINUS   shift, and go to state 79
    STAR    shift, and go to state 80
    DIV     shift, and go to state 81
    OR      shift, and go to state 82
    AND     shift, and go to state 83

    $default  reduce using rule 43 (VarStm)


State 46

   61 Exp: Lvalue . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 84


State 47

   54 Exp: Constant .

    $default  reduce using rule 54 (Exp)


State 48

   55 Exp: Call .

    $default  reduce using rule 55 (Exp)


State 49

    5 Class: CLASS ID EXTENDS ID LC ClassStms . RC

    RC  shift, and go to state 85


State 50

   42 DeclareStm: STATIC FINAL VarType . VarStm SEMI

    ID      shift, and go to state 53
    NOT     shift, and go to state 32
    LP      shift, and go to state 33
    DPLUS   shift, and go to state 34
    DMINUS  shift, and go to state 35
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 37
    STR     shift, and go to state 38
    BOOL    shift, and go to state 39
    MINUS   shift, and go to state 40
    NEW     shift, and go to state 41
    THIS    shift, and go to state 42

    VarStm    转到状态 86
    BoolExp   转到状态 44
    Exp       转到状态 45
    Lvalue    转到状态 46
    Constant  转到状态 47
    Call      转到状态 48


State 51

   11 Fun: STATIC VarType ID . LP Args RP LC BaseStm RC
   56 Exp: ID . DOT Call
   57    | ID . DOT ID
   58    | ID .
   70    | ID . ArrayIndex
   79 Lvalue: ID .
   84 Call: ID . LP CallArgs RP

    DOT  shift, and go to state 60
    LP   shift, and go to state 87
    LB   shift, and go to state 62

    ASSIGNOP  reduce using rule 79 (Lvalue)
    $default  reduce using rule 58 (Exp)

    ArrayIndex  转到状态 63


State 52

   40 DeclareStm: STATIC VarType VarStm . SEMI

    SEMI  shift, and go to state 88


State 53

   56 Exp: ID . DOT Call
   57    | ID . DOT ID
   58    | ID .
   70    | ID . ArrayIndex
   79 Lvalue: ID .
   84 Call: ID . LP CallArgs RP

    DOT  shift, and go to state 60
    LP   shift, and go to state 89
    LB   shift, and go to state 62

    ASSIGNOP  reduce using rule 79 (Lvalue)
    $default  reduce using rule 58 (Exp)

    ArrayIndex  转到状态 63


State 54

   41 DeclareStm: FINAL VarType VarStm . SEMI

    SEMI  shift, and go to state 90


State 55

   18 Arrays: ARRAY Arrays .

    $default  reduce using rule 18 (Arrays)


State 56

   49 Arg: VarType . ID
   50    | VarType . ID COMMA Arg

    ID  shift, and go to state 91


State 57

   12 Fun: ID LP Args . RP LC BaseStm RC

    RP  shift, and go to state 92


State 58

   48 Args: Arg .

    $default  reduce using rule 48 (Args)


State 59

   47 Args: EMPTY .

    $default  reduce using rule 47 (Args)


State 60

   56 Exp: ID DOT . Call
   57    | ID DOT . ID

    ID  shift, and go to state 93

    Call  转到状态 94


State 61

   10 Fun: VarType ID LP . Args RP LC BaseStm RC
   84 Call: ID LP . CallArgs RP

    TYPE    shift, and go to state 13
    ID      shift, and go to state 95
    NOT     shift, and go to state 32
    LP      shift, and go to state 33
    DPLUS   shift, and go to state 34
    DMINUS  shift, and go to state 35
    INT     shift, and go to state 36
    FLOAT   shift, and go to state 37
    STR     shift, and go to state 38
    BOOL    shift, and go to state 39
    MINUS   shift, and go to state 40
    NEW     shift, and go to state 41
    THIS    shift, and go to state 42

    $default  reduce using rule 89 (EMPTY)

    VarType   转到状态 56
    Args      转到状态 96
    Arg       转到状态 58
    BoolExp   转到状态 44
    Exp       转到状态 97
    Lvalue    转到状态 46
    Constant  转到状态 47
    Call      转到状态 48
    CallArgs  转到状态 98
    CallArg   转到状态 99
    EMPTY     转到状态 100


State 62

   77 ArrayIndex: LB . Exp RB
   78           | LB . Exp RB ArrayIndex
